# mdbook-llms-txt-tools

./: .gitignore  Cargo.toml  README.ja.md  README.md
.cursor/rules/: project-detail.mdc
assets/deep-chapter-project/: book.toml
assets/deep-chapter-project/src/: SUMMARY.md  chapter_1.md  chapter_1_1.md  chapter_1_1_1.md  chapter_1_1_1_1.md  chapter_1_1_1_1_1.md  chapter_1_2.md  chapter_1_2_1.md  chapter_1_2_1_1.md
assets/order-inconsistency-project/: book.toml
assets/order-inconsistency-project/src/: README.md  SUMMARY.md  a_chapter.md  m_chapter.md  z_chapter.md
assets/simple-project/: book.toml
assets/simple-project/book/debug-context-export/: context.json
assets/simple-project/src/: SUMMARY.md  chapter_1.md  chapter_2.md  introduction.md
assets/simple-project/src/chapter_1/: section_1.md
assets/test_render_contexts/: deep-chapter-project.json  order-inconsistency-project.json  simple-project.json
src/: main.rs
