[package]
name = "mdbook-llms-txt-tools"
version = "0.1.0"
edition = "2021"
description = "A tool to convert mdbook to llmstxt.org format"
license = "MIT"
repository = "https://github.com/higumachan/mdbook-llms-txt"
authors = ["Yuta Hinokuma <yuta.hinokuma725@gmail.com>"]
keywords = ["mdbook", "llms", "documentation", "converter"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
readme = "README.md"

[features]
debug-tool = []

[dependencies]
mdbook = "0.4"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
similar-asserts = "1.5"

[[bin]]
name = "mdbook-llms-txt"
path = "src/bin/mdbook-llms-txt.rs"

[[bin]]
name = "mdbook-llms-txt-full"
path = "src/bin/mdbook-llms-txt-full.rs"

[[bin]]
name = "mdbook-debug-context-export"
path = "src/bin/debug_context_export.rs"
required-features = ["debug-tool"]
